<resources>

    <string name="app_name">Go4Lunch</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="first_activity">LoginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--    facebook ID  -->
    <string name="facebook_application_id">4513689965341886</string>
    <string name="fb_login_protocol_scheme">fb4513689965341886</string>

    <!--    login activity  -->
    <string name="google_connection_button_text">Sign in with Google</string>
    <string name="facebook_connection_button_text">Sign in with Facebook</string>

    <!--    main activity bottom navigation menu strings  -->
    <string name="bottom_navigation_menu_map">Map View</string>
    <string name="bottom_navigation_menu_list">List View</string>
    <string name="bottom_navigation_menu_coworkers">Coworkers View</string>
    <string name="bottom_navigation_menu_chat">Chat View</string>

    <!--    main activity menu drawer strings-->
    <string name="menu_activity_menu_drawer_lunch">YOUR LUNCH</string>
    <string name="menu_activity_menu_drawer_settings">SETTINGS</string>
    <string name="menu_activity_menu_drawer_logout">LOGOUT</string>
    <string name="main_activity_navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="main_activity_navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="no_restaurant_choose"> at the moment their is not restaurant chosen</string>
    <string name="log_out">you are disconnected</string>
    <string name="title_bar">I\'m Hungry</string>
    <string name="nav_header_image_content_description">Image of the header</string>

    <!--    main activity action search strings-->
    <string name="menu_activity_action_search">Search</string>

    <!--    connection firebase message-->
    <string name="error_not_connected">please connect your account !</string>
    <string name="error_authentication_canceled">Authentication cancelled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">Unknown error&#8230;</string>
    <string name="connection_succeed">Authentication successful!</string>
    <string name="unknown_error">Error unknown error</string>

    <!--  RestaurantActivity -->
    <string name="header_pic_restaurant">header of restaurant picture</string>
    <!--restaurant buttons-->
    <string name="like_btn">LIKE</string>
    <string name="website_btn">WEBSITE</string>
    <string name="call_btn">CALL</string>
    <string name="error_no_phone_available">No Phone Available</string>
    <string name="error_permission_denied">Permission Denied</string>
    <string name="error_no_website">No Website</string>
    <string name="error_unknown">Unknown error</string>

    <!--  RestaurantViewHolder -->
    <string name="eat_at">eat at</string>
    <string name="no_decision">made no decision at now</string>
    <string name="restaurant_user_photo_content_description">restaurant user photo</string>

    <!--  AlertReceiver -->
    <string name="lunch_at">You\re lunching at</string>
    <string name="with"> with </string>
    <string name="alone">alone</string>

    <!--  NotificationHelper -->
    <string name="alarm_title">Today, that is your lunch</string>

    <!--  SettingsActivity -->
    <string name="alarmOnButton">Alarm on</string>
    <string name="alarmOffButton">Alarm off</string>
    <string name="activation_alarm">Activation of the alarm for 12h</string>
    <string name="deactivation_alarm">Deactivation of the alarm</string>

    <!--  ListFragment -->
    <string name="listFragment_bar">I\'m Hungry</string>
    <string name="restaurant_image_content_description">Image of the restaurant</string>

    <!--  ListViewHolder -->
    <string name="open_until">Open Until</string>
    <string name="closing_soon">Closing Soon</string>

    <!--  CoworkersFragment -->
    <string name="available_coworkers">Available Coworkers</string>

    <!--  CoworkersFragmentViewholder -->
    <string name="eat_coworkers">eat at</string>
    <string name="no_decided">has not decided yet</string>
    <string name="coworker_photo_description">coworker Photo</string>

    <!--  ChatFragment -->
    <string name="text_view_chat_empty">this thread is empty</string>
    <string name="enter_text">Enter your message</string>
    <string name="button_title_chat_send"> Send </string>
    <string name="chat_coworkers">Chat with Coworkers</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="image_preview_content_description">image preview</string>
    <string name="image_add_button_content_description">image add button</string>
    <string name="image_profile_content_description">image of your profile</string>

    <!--  ChatFragment permission asking -->
    <string name="popup_title_permission_files_access">This application need permission to work</string>
    <string name="files_access_granted">You have the right to access to images</string>
    <string name="toast_title_no_image_chosen">No selected image&#8230; </string>


</resources>
