<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map_button"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_menu_black_map"
        android:title="@string/bottom_navigation_menu_map" />

    <item
        android:id="@+id/list_button"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_menu_black_list"
        android:title="@string/bottom_navigation_menu_list" />

    <item
        android:id="@+id/coworkers_button"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_menu_black_team"
        android:title="@string/bottom_navigation_menu_coworkers" />

    <item
        android:id="@+id/chat_button"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_menu_chat"
        android:title="@string/bottom_navigation_menu_chat"
        app:showAsAction="ifRoom" />


</menu>