<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item

            android:id="@+id/lunch_menu_drawer"
            android:icon="@drawable/main_activity_menu_drawer_black_lunch"
            android:title="@string/menu_activity_menu_drawer_lunch"/>

        <item
            android:id="@+id/settings_menu_drawer"
            android:icon="@drawable/main_activity_menu_drawer_black_parameters"
            android:title="@string/menu_activity_menu_drawer_settings"/>
            />

        <item
            android:id="@+id/logout_menu_drawer"
            android:icon="@drawable/main_activity_menu_drawer_black_logout"
            android:title="@string/menu_activity_menu_drawer_logout"/>
            />


    </group>

</menu>
