<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/restaurant_activity_layout"
    tools:context=".activities.ui.RestaurantActivity">

    <ImageView
        android:id="@+id/header_pic_resto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/header_pic_resto" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_act_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginVertical="170dp"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:src="@drawable/activity_restaurant_valid_done"
        app:fabSize="auto"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/resto_name"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:textStyle="bold|italic"
            android:layout_marginStart="35dp"
            android:layout_marginTop="7dp"
            android:text="" />

        <TextView
            android:id="@+id/resto_address"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:textStyle="bold|italic"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="305dp"
            android:layout_marginTop="35dp"
            android:numStars="3"
            android:text=""
            android:theme="@style/RatingBarRestaurant"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_action_btn"
        android:layout_marginTop="270dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/phone_btn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="20dp"
            android:backgroundTint="#FFFFFF"
            android:drawableTop="@drawable/activity_restaurant_phone"
            android:drawableTint="@color/colorPrimaryDark"
            android:text="@string/call_btn"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/star_btn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center|center_vertical"
            android:drawableTop="@drawable/activity_restaurant_star"
            android:backgroundTint="#FFFFFF"
            android:drawableTint="@color/colorPrimaryDark"
            android:text="@string/like_btn"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/internet_btn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:drawableTop="@drawable/activity_restaurant_internet"
            android:backgroundTint="#FFFFFF"
            android:drawableTint="@color/colorPrimaryDark"
            android:text="@string/website_btn"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurant_RV"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/frame_action_btn"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />





</RelativeLayout>